/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.0/userguide/building_java_projects.html in the Gradle documentation.
 * 
 * Javafx Github Plugin Info: https://github.com/openjfx/javafx-gradle-plugin
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'java'
    id 'org.javamodularity.moduleplugin' version '2.0.0'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.1.1'
    id 'application'
}

version '0.0.1'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven {
        url "https://sandec.jfrog.io/artifactory/repo"
    }
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    implementation project(":glad")

    implementation("org.yaml:snakeyaml:2.5")

    implementation fileTree(dir: 'lib', include: ['*.jar'])
    implementation("com.mysql:mysql-connector-j:9.6.0")
    compileOnly("org.jetbrains:annotations:26.1.0")

// Source: https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
//    implementation 'org.slf4j:slf4j-api:2.0.16'
//    runtimeOnly 'org.slf4j:slf4j-simple:2.0.16'

//    implementation 'com.dlsc.gemsfx:gemsfx:3.10.1'
    implementation 'com.dlsc.gemsfx:gemsfx:2.16.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
    // The line resolves the problem with the Java Language Server in VS Code, but it is not needed for gradle run. 
    // Witouth this line, gradle run works, but the Java Language Server in VS Code reports “module not found” for module jars that are on the Gradle module path.
//    modularity.inferModulePath = true
}

//tasks.withType(JavaCompile) {
//    options.compilerArgs << "-Xlint:all" // Ativa todos os avisos
//    options.compilerArgs << "-Werror"    // Transforma todos os avisos em ERROS de compilação
//}

application {
    mainClass = 'io.github.gleidsonmt.todo.App'
    mainModule = 'io.github.gleidsonmt.todo'
}

javafx {
    version = "23.0.2"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.swing', 'javafx.web']
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
    jpackage {

//        imageOptions = [
//                '--icon', 'logo_256.ico'
//        ]

        installerType = 'exe'
        appVersion = version
        installerOptions = [
                '--description', "A todo made in JavaFx UI Toolkit.",
                '--copyright', 'Copyright © 2026 GLEIDSON NEVES DA SILVEIRA'
//                , '--icon', 'logo_256.ico'

        ]

        addExtraDependencies("javafx")
    }
}